--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -12,10 +12,38 @@
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus sunt minima qui perferendis cum quos iure at? Culpa possimus similique consectetur placeat sequi cum id, perspiciatis neque fugit eum rem modi architecto magni voluptatem debitis quaerat at recusandae? Eveniet quibusdam labore commodi! Tempora, consequatur hic. Sint odit error alias saepe quidem, harum hic consequatur dolorum quam voluptate. Dolor molestiae unde vel officia tenetur dolores magnam dolorem quae, recusandae officiis libero necessitatibus ex corrupti minima, deserunt dicta optio ea dolore porro.
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
             </div>
             <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, accusantium! Aperiam iure reiciendis eveniet rerum ab, illum dolor, qui fugiat nemo nesciunt suscipit deleniti officia distinctio cumque soluta repellendus? Nam, rem, eligendi enim voluptatum beatae aut aperiam reiciendis ullam autem voluptatem laboriosam temporibus obcaecati doloremque esse saepe consequatur omnis ipsum, aliquam doloribus ab incidunt sapiente recusandae dolores! Blanditiis tenetur rem deleniti fugiat et, quaerat ea odit est laborum aut iusto eaque impedit cumque tempore? Corrupti, distinctio repudiandae minus eum atque cumque consequatur odit saepe tempore vero beatae commodi nesciunt vel excepturi esse reiciendis dicta quidem? Facilis autem exercitationem vitae tempore!
+                <form>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Full Name</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter name">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Confirm Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Confirm Password">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
             </div>
         </div>
     </div>
