add route Login / Register

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
+<h1>You're not Login</h1>
+<a href="{{url_for('authenticate')}}" class="btn btn-primary">Login / Register</a>
 {% endblock %}
