--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -28,7 +28,7 @@
                 <form action="{{ url_for('register') }}" method="POST">
                     <div class="form-group">
                         <label for="exampleInputFirstName">Full Name</label>
-                        <input type="email" class="form-control" id="exampleInputFirstName" name="html_fullname" placeholder="Enter name">
+                        <input type="text" class="form-control" id="exampleInputFirstName" name="html_fullname" placeholder="Enter name">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
