updated search, like, unlike

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,7 @@
 {% extends 'base.html' %}
-
 {% block body %}
-{% if session.name %}
-    <h1>{{ session.name }}</h1>
-    <a href="{{url_for('logout')}}" class="btn btn-primary">Logout</a>
-{% else %}
-    <h1>You're not Login</h1>
-    <a href="{{url_for('authenticate')}}" class="btn btn-primary">Login / Register</a>
-{% endif %}
+{% include 'search-form.html' %}
+<hr>
+{% include 'grid.html' %}
+{% include 'footer.html' %}
 {% endblock %}
