--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -13,34 +13,36 @@
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
                 <form action="{{ url_for('login')}}" method="POST">
+                    <input type="hidden" name="csrf_token" value="{{csrf_token()}}">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" name="html_email" aria-describedby="emailHelp" placeholder="Enter email">
+                        <label for="email_login">Email address</label>
+                        <input type="email" class="form-control" id="email_login" name="html_email" aria-describedby="emailHelp" placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" name="html_password" placeholder="Password">
+                        <label for="password_login">Password</label>
+                        <input type="password" class="form-control" id="password_login" name="html_password" placeholder="Password">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
             <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
                 <form action="{{ url_for('register') }}" method="POST">
+                    <input type="hidden" name="csrf_token" value="{{csrf_token()}}">
                     <div class="form-group">
-                        <label for="exampleInputFirstName">Full Name</label>
-                        <input type="text" class="form-control" id="exampleInputFirstName" name="html_fullname" placeholder="Enter name">
+                        <label for="name_register">Full Name</label>
+                        <input type="text" class="form-control" id="name_register" name="html_fullname" placeholder="Enter name">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" name="html_email" aria-describedby="emailHelp" placeholder="Enter email">
+                        <label for="email_register">Email address</label>
+                        <input type="email" class="form-control" id="email_register" name="html_email" aria-describedby="emailHelp" placeholder="Enter email">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" name="html_password" placeholder="Password">
+                        <label for="password_register">Password</label>
+                        <input type="password" class="form-control" id="password_register" name="html_password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Confirm Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" name="html_confirm" placeholder="Confirm Password">
+                        <label for="confirm_password_register">Confirm Password</label>
+                        <input type="password" class="form-control" id="confirm_password_register" name="html_confirm" placeholder="Confirm Password">
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
